:lipstick: Fix spacing on mobile

--- a/src/components/main/styles.styl
+++ b/src/components/main/styles.styl
@@ -11,5 +11,5 @@
   +mobile()
     position: absolute
     bottom: auto
-    top: pxToRem(65)
-    left: pxToRem(10)
+    top: pxToRem(64)
+    left: pxToRem(6)
