--- a/src/components/project-list/styles.styl
+++ b/src/components/project-list/styles.styl
@@ -24,8 +24,7 @@
   padding-bottom: pxToRem(20)
   transition: color 0.3s ease
   +mobile()
-    padding-top: pxToRem(50)
-    padding-bottom: pxToRem(10)
+    padding: pxToRem(63) pxToRem(6) pxToRem(10)
   li
     position: relative
     a
